fix: scrollbar on drag drop files 🚑

--- a/src/app/components/tab/tab.component.scss
+++ b/src/app/components/tab/tab.component.scss
@@ -28,6 +28,7 @@
   user-select: none;
   &.clipboard-hover {
     border: 3px solid;
+    height: calc(100% - 6px);
     box-shadow: inset 0 0 14px var(--color-primary), inset 0 0 16px var(--color-secondary);
     animation-name: rainbow;
     animation-duration: 1s;
